footer section added

--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <link rel="stylesheet" href="./styles/nav.css">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200&display=swap" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@200;400;500;600&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./styles/index.css">
     <script src="https://kit.fontawesome.com/9a460dffa9.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="./styles/index.css">
+    <link rel="stylesheet" href="./styles/footer.css">
     <title>Homepage</title>
 </head>
         
@@ -71,7 +72,7 @@
                 </div>
               </div>
             <div class="dropdown">
-                <button class="dropbtn">Pricing</button>
+                <button id="pricingBtn" class="dropbtn">Pricing</button>
               </div>
             <div class="dropdown">
                 <button class="dropbtn">Solutions</button>
@@ -128,12 +129,12 @@
                   <div class="row">
                     <div class="column" id="resource">
                         <p style="background-color: pink; padding: 15px;">Learn everything that falls under the umbrealla of Subscriptions
-                            <a href="">Learning Hub</a>
+                            <a href="">Learning Hub <i class="fa-solid fa-chevron-right"></i></a>
                         </p>
 
                         <p>
                             Chargebee's in-house team of implementation experts is here to make sure you go live with your chargebee site at lighning fast speed.
-                            <a href=""> Professional Services & implementation</a>
+                            <a href=""> Professional Services & implementation </a>
                         </p>
 
                         <p>
@@ -181,7 +182,7 @@
 
     <div class="action-btns">
         <button id="language">English</button>
-        <button id="login">Login</button>
+        <button id="login">Login <i class="fa-solid fa-chevron-right"></i></button>
         <button id="demoBtn">Get a Demo</button>
     </div>
 </div>
@@ -651,5 +652,173 @@
   </div>
 
 </div>
+
+
+
+<!-- footer section -->
+
+<div class="footer_section">
+  <div class="footer-container">
+    <div class="footer_top">
+      <div>
+        <div class="footer_title">
+          <ul>
+            <li>
+              
+              <a href="">Product <i class="fa-solid fa-chevron-right"></i></a>
+            </li>
+          </ul>
+        </div>
+        <ul class="footer_list">
+          <li class="footer_list_item">
+            <a href="">Subcription Management</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Recurring Billing and Invoicing</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Recurring Payments</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Accounting and Taxes</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">SaaS Reporting</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Enterprise Billing</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Integrations</a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <div class="footer_title">
+          <ul>
+            <li>
+              <a href="">Help & Support <i class="fa-solid fa-chevron-right"></i></a>
+
+            </li>
+          </ul>
+        </div>
+        <ul class="footer_list">
+          <li class="footer_list_item">
+            <a href="">Subcription Management</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Recurring Billing and Invoicing</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Recurring Payments</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Accounting and Taxes</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">SaaS Reporting</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Enterprise Billing</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Integrations</a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <div class="footer_title">
+          <ul>
+            <li>
+              <a href="">Resources <i class="fa-solid fa-chevron-right"></i></a>
+
+            </li>
+          </ul>
+        </div>
+        <ul class="footer_list">
+          <li class="footer_list_item">
+            <a href="">Comapany <i class="fa-solid fa-chevron-right"></i></a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Recurring Billing and Invoicing</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Recurring Payments</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Accounting and Taxes</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">SaaS Reporting</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Enterprise Billing</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Integrations</a>
+          </li>
+        </ul>
+      </div>
+      <div>
+        <div class="footer_title">
+          <ul>
+            <li>
+              <a href="">Company <i class="fa-solid fa-chevron-right"></i></a>
+
+            </li>
+          </ul>
+        </div>
+        <ul class="footer_list">
+          <li class="footer_list_item">
+            <a href="">Subcription Management</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Recurring Billing and Invoicing</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Recurring Payments</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Accounting and Taxes</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">SaaS Reporting</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Enterprise Billing</a>
+          </li>
+          <li class="footer_list_item">
+            <a href="">Integrations</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer_bottom">
+      <ul>
+        <li>
+          <a href="">
+            <i class="fa-brands fa-facebook"></i>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <i class="fa-brands fa-twitter"></i>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <i class="fa-brands fa-youtube"></i>
+          </a>
+        </li>
+        <li>
+          <a href="">
+            <i class="fa-brands fa-linkedin"></i>
+          </a>
+        </li>
+      </ul>
+    </div>
+  </div>
+</div>
 </body>
 </html>
+<script src="./script/index.js"></script>
