--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
                 </div>
               </div>
             <div class="dropdown">
-                <button class="dropbtn">Customer</button>
+                <button id="customerBtn" class="dropbtn">Customer</button>
               </div>
             <div class="dropdown">
                 <button class="dropbtn">Resources</button>
@@ -171,7 +171,7 @@
                 </div>
               </div>
             <div class="dropdown">
-                <button class="dropbtn">Partner</button>
+                <button id="partnerBtn" class="dropbtn">Partner</button>
                 
               </div>
 
@@ -704,25 +704,25 @@
         </div>
         <ul class="footer_list">
           <li class="footer_list_item">
-            <a href="">Subcription Management</a>
+            <a href="">Security</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Recurring Billing and Invoicing</a>
+            <a href="">FAQs</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Recurring Payments</a>
+            <a href="">Status</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Accounting and Taxes</a>
+            <a href="">Product Documentation</a>
           </li>
           <li class="footer_list_item">
-            <a href="">SaaS Reporting</a>
+            <a href="">API Documentation</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Enterprise Billing</a>
+            <a href="">Supported Payment Gateways</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Integrations</a>
+            <a href="">Sitemap</a>
           </li>
         </ul>
       </div>
@@ -737,25 +737,25 @@
         </div>
         <ul class="footer_list">
           <li class="footer_list_item">
-            <a href="">Comapany <i class="fa-solid fa-chevron-right"></i></a>
+            <a href="">Blog</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Recurring Billing and Invoicing</a>
+            <a href="">Compare Payment Gateways</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Recurring Payments</a>
+            <a href="">Tackling Payment Failures</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Accounting and Taxes</a>
+            <a href="">Enterprise Billing Guide</a>
           </li>
           <li class="footer_list_item">
-            <a href="">SaaS Reporting</a>
+            <a href="">Webinars</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Enterprise Billing</a>
+            <a href="">Events</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Integrations</a>
+            <a href="">Glossaries</a>
           </li>
         </ul>
       </div>
@@ -770,25 +770,25 @@
         </div>
         <ul class="footer_list">
           <li class="footer_list_item">
-            <a href="">Subcription Management</a>
+            <a href="">Customers</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Recurring Billing and Invoicing</a>
+            <a href="">Partners</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Recurring Payments</a>
+            <a href="">Careers</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Accounting and Taxes</a>
+            <a href="">Press</a>
           </li>
           <li class="footer_list_item">
-            <a href="">SaaS Reporting</a>
+            <a href="">Brand Guidelines</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Enterprise Billing</a>
+            <a href="">Terms of Service</a>
           </li>
           <li class="footer_list_item">
-            <a href="">Integrations</a>
+            <a href="">Privacy Policy</a>
           </li>
         </ul>
       </div>
