--- a/pages/product.html
+++ b/pages/product.html
@@ -564,25 +564,25 @@
           </div>
           <ul class="footer_list">
             <li class="footer_list_item">
-              <a href="">Subcription Management</a>
+              <a href="">Security</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Recurring Billing and Invoicing</a>
+              <a href="">FAQs</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Recurring Payments</a>
+              <a href="">Status</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Accounting and Taxes</a>
+              <a href="">Product Documentation</a>
             </li>
             <li class="footer_list_item">
-              <a href="">SaaS Reporting</a>
+              <a href="">API Documentation</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Enterprise Billing</a>
+              <a href="">Supported Payment Gateways</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Integrations</a>
+              <a href="">Sitemap</a>
             </li>
           </ul>
         </div>
@@ -597,25 +597,25 @@
           </div>
           <ul class="footer_list">
             <li class="footer_list_item">
-              <a href="">Comapany <i class="fa-solid fa-chevron-right"></i></a>
+              <a href="">Blog</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Recurring Billing and Invoicing</a>
+              <a href="">Compare Payment Gateways</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Recurring Payments</a>
+              <a href="">Tackling Payment Failures</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Accounting and Taxes</a>
+              <a href="">Enterprise Billing Guide</a>
             </li>
             <li class="footer_list_item">
-              <a href="">SaaS Reporting</a>
+              <a href="">Webinars</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Enterprise Billing</a>
+              <a href="">Events</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Integrations</a>
+              <a href="">Glossaries</a>
             </li>
           </ul>
         </div>
@@ -630,25 +630,25 @@
           </div>
           <ul class="footer_list">
             <li class="footer_list_item">
-              <a href="">Subcription Management</a>
+              <a href="">Customers</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Recurring Billing and Invoicing</a>
+              <a href="">Partners</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Recurring Payments</a>
+              <a href="">Careers</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Accounting and Taxes</a>
+              <a href="">Press</a>
             </li>
             <li class="footer_list_item">
-              <a href="">SaaS Reporting</a>
+              <a href="">Brand Guidelines</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Enterprise Billing</a>
+              <a href="">Terms of Service</a>
             </li>
             <li class="footer_list_item">
-              <a href="">Integrations</a>
+              <a href="">Privacy Policy</a>
             </li>
           </ul>
         </div>
