--- a/personal1.html
+++ b/personal1.html
@@ -55,7 +55,7 @@
 
 <body>
     <div class="logo">
-        <img src="/images/chargify_logo.png" alt="">
+        <img src="/images/chargify transparent logo.png" alt="">
     </div>
     <div id="main">
         <h1>Personalize your experience</h1>
