--- a/Acc_SetUp.html
+++ b/Acc_SetUp.html
@@ -62,6 +62,16 @@
     <div id="main">
         <div class="text">
             <h1>Complete your account setup</h1>
+            <div style="display: flex;">
+                <button
+                    style="border-radius: 50px;background-color: rgb(107, 48, 188);margin-right: 5px;border-radius: 50px;height: 20px;width: 20px; border: 0;"></button>
+                <button
+                    style="border-radius: 50px;background-color: rgb(107, 107, 107);margin-right: 5px;border-radius: 50px;height: 20px;width: 20px; border: 0;"></button>
+                <button
+                    style="border-radius: 50px;background-color: rgb(107, 107, 107);margin-right: 5px;border-radius: 50px;height: 20px;width: 20px; border: 0;"></button>
+                <button
+                    style="border-radius: 50px;background-color: rgb(107, 107, 107);margin-right: 5px;border-radius: 50px;height: 20px;width: 20px; border: 0;"></button>
+            </div>
             <h4>Choose a domain for your business</h4>
             <p>Your domain name is a unique identifier for your Chargebee site.</p>
             <input type="text" id="comp_name" placeholder="example.com" required>
@@ -71,7 +81,6 @@
             <h4>Set password</h4>
             <input type="text" id="pass" placeholder="Example@gmail.com" required>
             <h4>Minimum requirements</h4>
-            <li>8 characters long</li>
             <li>1 special character</li>
             <li id="num">1 number</li>
             <button id="next" onclick="next_page()" style="display: block;margin-top: 20px;">Next</button>
