--- a/pages/Pricing.html
+++ b/pages/Pricing.html
@@ -124,7 +124,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <button class="dropbtn">Customer</button>
+                        <button id="customerBtn" class="dropbtn">Customer</button>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">Resources</button>
@@ -174,7 +174,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <button class="dropbtn">Partner</button>
+                        <button id="partnerBtn" class="dropbtn">Partner</button>
                         
                     </div>
     
