--- a/pages/product.html
+++ b/pages/product.html
@@ -34,7 +34,7 @@
                         <div class="row">
                             <div class="column">
                             <a href="#">Subscription Management</a>
-                            <a href="#">Overview</a>
+                            <a href="./product.html">Overview</a>
                             <a href="#">Create & Manage Plans</a>
                             <a href="#">Entitlements</a>
                             <a href="#">Pricing & Management</a>
@@ -127,7 +127,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <button class="dropbtn">Customer</button>
+                        <button id="customerBtn" class="dropbtn">Customer</button>
                     </div>
                     <div class="dropdown">
                         <button class="dropbtn">Resources</button>
@@ -177,7 +177,7 @@
                         </div>
                     </div>
                     <div class="dropdown">
-                        <button class="dropbtn">Partner</button>
+                        <button id="partnerBtn" class="dropbtn">Partner</button>
                         
                     </div>
     
