--- a/pages/partners.html
+++ b/pages/partners.html
@@ -32,7 +32,7 @@
                       <div class="row">
                         <div class="column">
                           <a href="#">Subscription Management</a>
-                          <a href="./Pricing.html">Overview</a>
+                          <a href="./product.html">Overview</a>
                           <a href="#">Create & Manage Plans</a>
                           <a href="#">Entitlements</a>
                           <a href="#">Pricing & Management</a>
