--- a/pages/personal4.html
+++ b/pages/personal4.html
@@ -77,7 +77,7 @@
 
 <body>
     <div class="logo">
-        <img src="/images/chargify_logo.png" alt="">
+        <img src="../images/chargify transparent logo.png" alt="">
     </div>
     <div id="main">
         <h1>Personalize your experience</h1>
@@ -144,7 +144,7 @@
             .then(result => console.log(result))
             .catch(error => console.log('error', error));
             alert("Thanks for filling details")
-        window.location = "sidebar.html"
+        window.location = "../pages/sidebar.html"
     }
     function next_page2() {
         let x = document.querySelector("#opt2").innerText
@@ -169,7 +169,7 @@
             .then(result => console.log(result))
             .catch(error => console.log('error', error));
             alert("Thanks for filling details")
-        window.location = "sidebar.html"
+        window.location = "../pages/sidebar.html"
     }
     function next_page3() {
         let x = document.querySelector("#opt3").innerText
@@ -194,7 +194,7 @@
             .then(result => console.log(result))
             .catch(error => console.log('error', error));
             alert("Thanks for filling details")
-        window.location = "sidebar.html"
+        window.location = "../pages/sidebar.html"
     }
     function next_page4() {
         let x = document.querySelector("#opt4").innerText
@@ -219,9 +219,9 @@
             .then(result => console.log(result))
             .catch(error => console.log('error', error));
             alert("Thanks for filling details")
-        window.location = "sidebar.html"
+        window.location = "../pages/sidebar.html"
     }
     function prev() {
-        window.location = "personal3.html"
+        window.location = "../pages/personal3.html"
     }
 </script>
