--- a/pages/sidebar.html
+++ b/pages/sidebar.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dashboard</title>
-    <link rel="stylesheet" href="./styles/sidebar.css">
+    <link rel="stylesheet" href="../styles/sidebar.css">
 </head>
 
 <body>
     <div id="side-bar">
         <div id="logo-Section">
-            <img id="logo" src="./images/man.png" alt="">
+            <img id="logo" src="../images/man.png" alt="">
             <div id="details">
             </div>
         </div>
@@ -151,19 +151,19 @@
                 </div>
 
                 <div class="graph">
-                    <img src="./images/graph_1.png" alt="">
-                    <img src="./images/graph_2.png" alt="">
-                    <img src="./images/graph_3.png" alt="">
-                    <img src="./images/graph_4.png" alt="">
-                    <img src="./images/graph_5.png" alt="">
-                    <img src="./images/graph_6.png" alt="">
-                    <img src="./images/graph_7.png" alt="">
-                    <img src="./images/graph_8.png" alt="">
-                    <img src="./images/graph_9.png" alt="">
-                    <img src="./images/graph_10.png" alt="">
+                    <img src="../images/graph_1.png" alt="">
+                    <img src="../images/graph_2.png" alt="">
+                    <img src="../images/graph_3.png" alt="">
+                    <img src="../images/graph_4.png" alt="">
+                    <img src="../images/graph_5.png" alt="">
+                    <img src="../images/graph_6.png" alt="">
+                    <img src="../images/graph_7.png" alt="">
+                    <img src="../images/graph_8.png" alt="">
+                    <img src="../images/graph_9.png" alt="">
+                    <img src="../images/graph_10.png" alt="">
                 </div>
             </div>
 </body>
 
 </html>
-<script src="./script/sidebar.js"></script>
+<script src="../script/sidebar.js"></script>
