--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://kit.fontawesome.com/9a460dffa9.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="./styles/index.css">
     <link rel="stylesheet" href="./styles/footer.css">
+    <link rel="stylesheet" href="./styles/banner.css">
     <title>Homepage</title>
 </head>
         
@@ -216,13 +217,14 @@
       </div>
     </div>
   </div>
-
   <div class="main_heading_box">
     <div class="off_img_box">
-      <img src="https://webstatic.chargebee.com/assets/web/543/images/home/coc/customers/jose-bolanos.png" alt="">
+      <img src="./images/crop profile.png" alt="">
     </div>
   </div>
- 
+ <!-- <div id="ctoName">
+  <p>Jose Balnos</p>
+ </div> -->
 </div>
 
 
