--- a/index.html
+++ b/index.html
@@ -183,8 +183,8 @@
 
     <div class="action-btns">
         <button id="language">English</button>
-        <button id="login">Login <i class="fa-solid fa-chevron-right"></i></button>
-        <button id="demoBtn">Get a Demo</button>
+        <button id="login" >Login <i class="fa-solid fa-chevron-right"></i></button>
+        <button id="demo_btn">Get a Demo</button>
     </div>
 </div>
 
@@ -212,7 +212,7 @@
         </p>
       </div>
       <div>
-        <button id="demo_btn" >Get a Demo <i class="fa fa-arrow-right" aria-hidden="true"></i> </button>
+        <button id="demo-Btn-nav" >Get a Demo <i class="fa fa-arrow-right" aria-hidden="true"></i> </button>
         <button id="sign-up-btn" > sign up for free <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
       </div>
     </div>
@@ -610,7 +610,7 @@
 
         <input type="text" name="" placeholder="email@company.com" id="subscribe">
 
-        <button>Get a Demo</button>
+        <button id="sub_demo">Get a Demo</button>
       </div>
     </div>
     <div class="subs-btn">
