--- a/pages/Pricing.html
+++ b/pages/Pricing.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../styles/nav.css">
     <link rel="stylesheet" href="../styles/pricing.css">
     <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/banner.css">
     <title>Pricing</title>
 </head>
 <body>
