--- a/pages/customers.html
+++ b/pages/customers.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../styles/customers.css">
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/nav.css">
+    <link rel="stylesheet" href="../styles/banner.css">
     <title>Customers</title>
     <style>
        
