--- a/pages/partners.html
+++ b/pages/partners.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../styles/nav.css">
     <link rel="stylesheet" href="../styles/partners.css">
     <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../styles/banner.css">
     <title>Partners</title>
     
 </head>
