--- a/pages/product.html
+++ b/pages/product.html
@@ -12,6 +12,7 @@
     
     <link rel="stylesheet" href="../styles/footer.css">
     <link rel="stylesheet" href="../styles/product.css">
+    <link rel="stylesheet" href="../styles/banner.css">
     <title>Product</title>
 </head>
 
@@ -201,8 +202,8 @@
             </div>
             <div class="head-desc"><p>Get the flexibility to manage subscription problems you have today. And the ones that will creep up a year from now.</p></div>
             <div class="head-actions">
-                <button>Get a Demo <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
-                <button>Sign up for free <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                <button id="demo_btn">Get a Demo <i class="fa fa-arrow-right" aria-hidden="true"></i></button>
+                <button id="sign_up_2">Sign up for free <i class="fa fa-arrow-right" aria-hidden="true"></i>
                 </button>
             </div>
         </div>
@@ -471,7 +472,7 @@
   
           <input type="text" name="" placeholder="email@company.com" id="subscribe">
   
-          <button>Get a Demo</button>
+          <button id="sub_demo">Get a Demo</button>
         </div>
       </div>
       <div class="subs-btn">
