--- a/pages/demo.html
+++ b/pages/demo.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Demo call</title>
     <link rel="stylesheet" href="../styles/demo.css">
     <link rel="stylesheet" href="../styles/footer.css">
 </head>
@@ -13,7 +13,7 @@
 
 
     <div id="chargebee_logo">
-        <img src="../images/chargify transparent logo.png" alt="">
+        <img src="../images/white_logo.png" alt="">
     </div>
 
     <div id="container">
@@ -21,7 +21,7 @@
 
 
         <div id="heading_container">
-            <h1>Elevate Your Subscription Experience with Chargebee</h1>
+            <h1>Elevate Your Subscription Experience with Chargify</h1>
             <p>Get a demo that's customized around your unique subscription workflows and pain-points.</p>
         </div>
         <div id="form_container">
@@ -39,7 +39,7 @@
                     <input name="resident" type="radio">No
                 </div>
                 <div id="description">
-                    <label for="">What problem can Chargebee solve for you?</label>
+                    <label for="">What problem can chargify solve for you?</label>
                     <textarea cols="35" rows="4"></textarea>
 
                 </div>
@@ -68,9 +68,9 @@
 
     <div id="chargebee_description">
         <div>
-            <h2>Chargebee is a fantastic solution that really meets the needs of any online business from Saas to
+            <h2>chargify is a fantastic solution that really meets the needs of any online business from Saas to
                 e-commerce. I have had experience with many platforms both as a leader and as a consultant, and
-                Chargebee is the platform I have liked the most.</h2>
+                Chargify is the platform I have liked the most.</h2>
 
             <h1 class="dailius">Dailius Wilson</h1>
             <p class="dailius">VP Sales & Growth, GetAccept</p>
