--- a/pages/personal2.html
+++ b/pages/personal2.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>personalize your experience</title>
+    <title>personalize your experience-2</title>
     <style>
         *{
             font-family: "Segoe UI";
