--- a/pages/Acc_SetUp.html
+++ b/pages/Acc_SetUp.html
@@ -79,7 +79,7 @@
             <p>This will be displayed on invites to your Chargebee account, email <br> notifications, etc.</p>
             <input type="text" id="name" placeholder="example" required>
             <h4>Set password</h4>
-            <input type="text" id="pass" placeholder="Example@gmail.com" required>
+            <input type="password" id="pass" placeholder="Example@gmail.com" required>
             <h4>Minimum requirements</h4>
             <li>1 special character</li>
             <li id="num">1 number</li>
